--- a/index.html
+++ b/index.html
@@ -1,67 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Simple Chat Room</title>
-  <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.4.0/firebase-database.js"></script>
+  <title>2-Person Chat</title>
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
   <style>
-    body { font-family: Arial; padding: 20px; }
-    #messages { border: 1px solid #ccc; height: 300px; overflow-y: scroll; padding: 10px; margin-bottom: 10px; }
-    input, button { padding: 10px; font-size: 16px; }
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    #chat { border: 1px solid #ccc; height: 300px; overflow-y: scroll; padding: 10px; }
+    input, button { padding: 10px; font-size: 16px; margin-top: 10px; }
+    #username { width: 100px; }
+    #message { width: 200px; }
   </style>
 </head>
 <body>
-  <h2>Simple Firebase Chat Room</h2>
-  <div id="messages"></div>
-  <input id="name" placeholder="Your name" />
-  <input id="message" placeholder="Type a message..." />
-  <button onclick="sendMessage()">Send</button>
+  <h2>Chat Room for Two</h2>
+  <div>
+    <input type="text" id="username" placeholder="Your name" />
+    <input type="text" id="message" placeholder="Your message..." />
+    <button onclick="sendMessage()">Send</button>
+  </div>
+  <div id="chat"></div>
 
   <script>
-    // 🔁 Replace this config with yours from Firebase Console
-    // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
-
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyCxOTwrBuseCQqUOmRBi94kLqGatwEXMwM",
-  authDomain: "chatroom-6ab46.firebaseapp.com",
-  projectId: "chatroom-6ab46",
-  storageBucket: "chatroom-6ab46.firebasestorage.app",
-  messagingSenderId: "1056579573993",
-  appId: "1:1056579573993:web:aebe91b272668a233a3878",
-  measurementId: "G-DEFVF402R9"
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
+    const socket = io('https://chat-server.glitch.me');
 
     function sendMessage() {
-      const name = document.getElementById('name').value.trim();
-      const message = document.getElementById('message').value.trim();
-      if (name && message) {
-        db.ref("messages").push({ name, message });
-        document.getElementById('message').value = '';
-      }
+      const name = document.getElementById('username').value.trim();
+      const msg = document.getElementById('message').value.trim();
+      if (!name || !msg) return;
+
+      socket.emit('chat message', `${name}: ${msg}`);
+      document.getElementById('message').value = '';
     }
 
-    const messagesDiv = document.getElementById('messages');
-
-    db.ref("messages").on('child_added', (data) => {
-      const { name, message } = data.val();
+    socket.on('chat message', function(msg) {
+      const chat = document.getElementById('chat');
       const div = document.createElement('div');
-      div.textContent = `${name}: ${message}`;
-      messagesDiv.appendChild(div);
-      messagesDiv.scrollTop = messagesDiv.scrollHeight;
+      div.textContent = msg;
+      chat.appendChild(div);
+      chat.scrollTop = chat.scrollHeight;
+    });
+
+    // Optional: Send message on Enter key
+    document.getElementById('message').addEventListener('keypress', function(e) {
+      if (e.key === 'Enter') sendMessage();
     });
   </script>
 </body>
